# ced.cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
benchmarks/demo/: ced_reel.py  make.sh  spec.json
benchmarks/demo/clips/: SOURCES.md
docs/: ARCHITECTURE.md  BENCHMARKS.md
examples/cli/: CMakeLists.txt  main.cpp
include/: ced_capi.h
scripts/: _inspect_ced.py  bench_torch.py  convert_ced_to_gguf.py  gen_ced_baseline.py  hf_model_card.md  parity_diverse.py  plot_benchmarks.py  publish_hf.py
src/: audio_io.cpp  audio_io.hpp  ced.cpp  ced.hpp  ced_capi.cpp  ced_runner.cpp  ced_runner.hpp  fft.cpp  fft.hpp  mel.cpp  mel.hpp  model_loader.cpp  model_loader.hpp
tests/: CMakeLists.txt  parity.hpp  test_blocks.cpp  test_capi.cpp  test_frontend.cpp  test_quant.cpp
